--- a/css/styles.css
+++ b/css/styles.css
@@ -54,5 +54,14 @@ section {
 .text-subdued {
   font-size: 1rem;
 }
+.surface-primary .text-subdued {
+  opacity: 0.8;
+}
+.surface-secondary .text-subdued {
+  opacity: 0.7;
+}
+.surface-accent .text-subdued {
+  opacity: 0.6;
+}
 
 /*# sourceMappingURL=styles.css.map */
