--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -69,4 +69,16 @@ section {
 .text-subdued {
   font-size: 1rem;
   // your code here
+
+  .surface-primary & {
+    opacity: 0.8;
+  }
+
+  .surface-secondary & {
+    opacity: 0.7;
+  }
+
+  .surface-accent & {
+    opacity: 0.6;
+  }
 }
